bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "status-control"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[package]
name = "status-control"
edition = "2021"
version = "0.0.1"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
env_logger = "0.11.6"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"

[dependencies.serde]
version = "1.0.216"
features = ["derive"]
